[package]
name = "rlens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
clap = { version = "3.2.20", features = ["derive"] }
directories = "4.0.1"
enum-map = "2.4.1"
euclid = "0.22.7"
femtovg = { version = "0.3.5", default-features = false }
glutin = "0.29.1"
hex = "0.4.3"
image = "0.24.3"
md-5 = "0.10.1"
rlua = { version = "0.19.4", default-features = false }
serde = { version = "1.0.144", features = ["derive"] }
toml = "0.5.9"

[features]
default = ["embedded_font"]
builtin-lua54=["rlua/builtin-lua54"]
builtin-lua53=["rlua/builtin-lua53"]
builtin-lua51=["rlua/builtin-lua51"]
system-lua54=["rlua/system-lua54"]
system-lua53=["rlua/system-lua53"]
system-lua51=["rlua/system-lua51"]
embedded_font = []

